Move footer outside of main

--- a/client/expert/index.html
+++ b/client/expert/index.html
@@ -125,7 +125,7 @@
               <div class="pure-u-1">
                 <fieldset class="pure-u-1 pure-u-md-1-3 form-group">
                   <input type="text" required name="request_someone_specific_linkedin" />
-                  <label class="control-label" for="input">Interest</label><i class="bar"></i>
+                  <label class="control-label" for="input">Area of expertise</label><i class="bar"></i>
                 </fieldset>
               </div>
             </div>
@@ -146,11 +146,11 @@
 
         <section>
           <legend class="pure-u-1">
-            <h2 class="no-margin">Using the info you've provided, we'll send you a list of potential matches.</h2>
+            <h2 class="no-margin">Using the info you've provided, we'll send you engagements you could be a fit for.</h2>
           </legend>
-          <h4 class="indented no-top-margin ">You can then review the list and finalize terms with the advisor(s) of your choice.</h4>
+          <h4 class="indented no-top-margin ">You can then review the terms and schedule time with the client.</h4>
           <div class="indented query-group">
-            <h4 class="no-margin">What is the <span class="underline">hourly rate</span> for your time? (We'll only send you requests that are willing to <span class="underline">pay this much or more</span>, but need to know your ceiling).</h4>
+            <h4 class="no-margin">What is the <span class="underline">hourly rate</span> for your time? (We'll only send you requests that are willing to <span class="underline">pay this much or more</span>).</h4>
             <div class="pure-u-1">
               <fieldset class="pure-u-1 pure-u-md-1-3 form-group" required>
                 <input type="text" pattern="^[$]?[\d,]+(?:\.[\d]{0,2})?$" min="0" required name="request_max_price"/>
@@ -185,11 +185,10 @@
         </div>
       </div>
     </div>
-
-    <footer class="m-box ribbon dark-ribbon footer">
-      <a href="mailto:moashared@gmail.com">Contact Us</a>
-    </footer>
   </main>
+  <footer class="m-box ribbon dark-ribbon footer">
+    <a href="mailto:moashared@gmail.com">Contact Us</a>
+  </footer>
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
