--- a/client/expert/index.html
+++ b/client/expert/index.html
@@ -118,7 +118,7 @@
             </div>
           </div>
 
-          <fieldset class="pure-u-1" id="contacts">
+          <fieldset class="pure-u-1" id="interests">
             <h4 class="no-margin">We will go through your LinkedIn profile to determine your best matches.</h4>
             <h4 class="no-margin">Do you have any areas of expertise other than the ones in your LinkedIn Profile?</h4>
             <div class="pure-g query-group">
@@ -133,10 +133,10 @@
 
           <div class="pure-u-1">
             <fieldset class="pure-u-1 pure-u-md-1-3">
-              <div class="pure-u-1 pure-u-md-1-3 is-center float-right" id="speak_with_add_contact">
+              <div class="pure-u-1 pure-u-md-1-3 is-center float-right" id="add_interest">
                 <button class="button tight sm-fill no-margin" type="button"><span>+</span></button>
               </div>
-              <div class="pure-u-1 pure-u-md-1-3 is-center float-left hide" id="speak_with_remove_contact">
+              <div class="pure-u-1 pure-u-md-1-3 is-center float-left hide" id="remove_interest">
                 <button class="button tight red sm-fill" type="button"><span>-</span></button>
               </div>
               <div class="clear-float"></div>
@@ -174,7 +174,7 @@
     </div>
 
     <div class="hide" id="templates">
-      <div id="contact">
+      <div id="interest">
         <div class="pure-g query-group">
           <div class="pure-u-1">
             <fieldset class="pure-u-1 pure-u-md-1-3 form-group">
@@ -192,5 +192,5 @@
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
-<script type="text/javascript" src="/js/form.js"></script>
+<script type="text/javascript" src="/js/expert_form.js"></script>
 </html>
