--- a/client/career/request/index.html
+++ b/client/career/request/index.html
@@ -410,5 +410,5 @@
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
-<script type="text/javascript" src="/js/form.js"></script>
+<script type="text/javascript" src="/js/consumer_form.js"></script>
 </html>
