--- a/client/expert/index.html
+++ b/client/expert/index.html
@@ -28,19 +28,19 @@
             <div class="pure-g">
               <div class="pure-u-1">
                 <fieldset class="pure-u-1 pure-u-md-1-3 form-group" required>
-                  <input type="text" required name="request_submitter_name"/>
+                  <input type="text" required name="expert_name"/>
                   <label class="control-label" for="input">Preferred Name</label><i class="bar"></i>
                 </fieldset>
               </div>
               <div class="pure-u-1">
                 <fieldset class="pure-u-1 pure-u-md-1-3 form-group" required>
-                  <input type="email" required name="request_submitter_email"/>
+                  <input type="email" required name="expert_email"/>
                   <label class="control-label" for="input">Email Address</label><i class="bar"></i>
                 </fieldset>
               </div>
               <div class="pure-u-1">
                 <fieldset class="pure-u-1 pure-u-md-1-3 form-group" required>
-                  <input type="text" pattern="^((http[s]?|ftp):\/)?\/?([^:\/\s]+)((\/\w+)*\/)([\w\-\.]+[^#?\s]+)(.*)?(#[\w\-]+)?$" required name="request_submitter_linkedin"/>
+                  <input type="text" pattern="^((http[s]?|ftp):\/)?\/?([^:\/\s]+)((\/\w+)*\/)([\w\-\.]+[^#?\s]+)(.*)?(#[\w\-]+)?$" required name="expert_linkedin"/>
                   <label class="control-label" for="input">LinkedIn URL</label><i class="bar"></i>
                 </fieldset>
               </div>
@@ -56,12 +56,12 @@
                 <fieldset required>
                   <div class="radio">
                     <label>
-                      <input type="radio" name="request_submitter_privacy" value="yes_share" required/><i class="helper"></i>I'm OK sharing my name and profile with potential clients
+                      <input type="radio" name="expert_privacy" value="yes_share" required/><i class="helper"></i>I'm OK sharing my name and profile with potential clients
                     </label>
                   </div>
                   <div class="radio">
                     <label>
-                      <input type="radio" name="request_submitter_privacy"  value="no_private" required/><i class="helper"></i>Please DO NOT share my name and profile -- only use generic description
+                      <input type="radio" name="expert_privacy"  value="no_private" required/><i class="helper"></i>Please DO NOT share my name and profile -- only use generic description
                     </label>
                   </div>
                 </fieldset>
@@ -75,7 +75,7 @@
               <div class="pure-g">
                 <div class="pure-u-1 pure-u-md-1-3">
                   <fieldset class="form-group" required>
-                    <select required name="request_submitter_medium">
+                    <select required name="expert_medium">
                       <option value="" selected disabled></option>
                       <option value="phone">Phone</option>
                       <option value="video">Video Chat</option>
@@ -124,7 +124,7 @@
             <div class="pure-g query-group">
               <div class="pure-u-1">
                 <fieldset class="pure-u-1 pure-u-md-1-3 form-group">
-                  <input type="text" required name="request_someone_specific_linkedin" />
+                  <input type="text" required name="area_of_expertise" />
                   <label class="control-label" for="input">Area of expertise</label><i class="bar"></i>
                 </fieldset>
               </div>
@@ -153,7 +153,7 @@
             <h4 class="no-margin">What is the <span class="underline">hourly rate</span> for your time? (We'll only send you requests that are willing to <span class="underline">pay this much or more</span>).</h4>
             <div class="pure-u-1">
               <fieldset class="pure-u-1 pure-u-md-1-3 form-group" required>
-                <input type="text" pattern="^[$]?[\d,]+(?:\.[\d]{0,2})?$" min="0" required name="request_max_price"/>
+                <input type="text" pattern="^[$]?[\d,]+(?:\.[\d]{0,2})?$" min="0" required name="expert_hourly_rate"/>
                 <label class="control-label" for="input">Hourly rate</label><i class="bar"></i>
               </fieldset>
             </div>
@@ -161,7 +161,7 @@
 
           <div class="indented">
             <fieldset class="form-group">
-              <textarea required name="request_freeform"></textarea>
+              <textarea required name="expert_freeform"></textarea>
               <label class="control-label" for="textarea">Anything else we should know before introducing you?</label><i class="bar"></i>
             </fieldset>
           </div>
@@ -178,8 +178,8 @@
         <div class="pure-g query-group">
           <div class="pure-u-1">
             <fieldset class="pure-u-1 pure-u-md-1-3 form-group">
-              <input type="text" required name="request_someone_specific_likedin"/>
-              <label class="control-label" for="input">Interest</label><i class="bar"></i>
+              <input type="text" required name="area_of_expertise"/>
+              <label class="control-label" for="input">Area of expertise</label><i class="bar"></i>
             </fieldset>
           </div>
         </div>
