Split resume review and career guidance

--- a/client/career/request/index.html
+++ b/client/career/request/index.html
@@ -31,7 +31,8 @@
                   <fieldset class="form-group" required>
                     <select required name="request_help_stage">
                       <option value="" selected disabled></option>
-                      <option value="app">Application review / guidance</option>
+                      <option value="career">Career guidance</option>
+                      <option value="app">Application / Resume review</option>
                       <option value="interview">Interview preparation</option>
                       <option value="offer">Offer evaluation</option>
                       <option value="other">Something else</option>
