--- a/client/expert/index.html
+++ b/client/expert/index.html
@@ -103,7 +103,10 @@
             <div class="query-group pure-g">
               <fieldset class="pure-u-1 checkbox">
                 <label>
-                  <input type="checkbox" name="app"/><i class="helper"></i>Application review / guidance
+                  <input type="checkbox" name="career"/><i class="helper"></i>Career guidance
+                </label>
+                <label>
+                  <input type="checkbox" name="app"/><i class="helper"></i>Application / Resume review
                 </label>
                 <label>
                   <input type="checkbox" name="interview"/><i class="helper"></i>Interview preparation
