--- a/client/school/request/index.html
+++ b/client/school/request/index.html
@@ -31,6 +31,7 @@
                   <fieldset class="form-group" required>
                     <select required name="request_help_stage">
                       <option value="" selected disabled></option>
+                      <option value="guidance">General guidance</option>
                       <option value="app">Application review / guidance</option>
                       <option value="interview">Interview preparation</option>
                       <option value="offer">Offer evaluation</option>
