--- a/client/expert/index.html
+++ b/client/expert/index.html
@@ -10,6 +10,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css" rel="stylesheet">
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link href="/css/main.css" rel="stylesheet">
+  <script type="text/javascript" src="/js/googleAnalytics.js"></script>
 </head>
 <body>
   <header class="header">
