--- a/client/school/thankyou/index.html
+++ b/client/school/thankyou/index.html
@@ -27,7 +27,7 @@
         </legend>
       </div>
       <div class="pure-u-1 is-center m-box">
-        <a class="button sm-fill" href="../request/"><span>Submit Another Request</span></a>
+        <a class="button sm-fill" href="../request/?source=schoolthankyou"><span>Submit Another Request</span></a>
       </div>
     </section>
     <section>
@@ -37,7 +37,7 @@
         </legend>
       </div>
       <div class="pure-u-1 is-center m-box">
-        <a class="button sm-fill" href="/expert/"><span>Become an Advisor</span></a>
+        <a class="button sm-fill" href="/expert/?source=schoolthankyou"><span>Become an Advisor</span></a>
       </div>
     </section>
   </main>
