--- a/client/school/index.html
+++ b/client/school/index.html
@@ -110,7 +110,7 @@
                 <a class="pure-button" href="./request/">
                   Get Connected
                 </a>
-                <a class="pure-button" href="/expert/">
+                <a class="pure-button" href="/expert/?source=school">
                   Become an Advisor
                 </a>
                 <a class="pure-button" href="/career/">
