Update school request form

--- a/client/school/request/index.html
+++ b/client/school/request/index.html
@@ -48,7 +48,7 @@
                     </p>
                     <fieldset class="pure-u-1 pure-u-md-2-3 form-group" required>
                       <input type="text" required name="request_help_position"/>
-                      <label class="control-label" for="input">Position</label><i class="bar"></i>
+                      <label class="control-label" for="input">Concentration</label><i class="bar"></i>
                     </fieldset>
                   </div>
                 </div>
@@ -59,7 +59,7 @@
                     </p>
                     <fieldset class="pure-u-1 pure-u-md-2-3 form-group" required>
                       <input type="text" required name="request_help_company"/>
-                      <label class="control-label" for="input">Company</label><i class="bar"></i>
+                      <label class="control-label" for="input">School</label><i class="bar"></i>
                     </fieldset>
                   </div>
                 </div>
@@ -83,7 +83,7 @@
                       for
                     </p>
                     <fieldset class="pure-u-1 pure-u-md-2-3 form-group">
-                      <span>Marketing Manager</span>
+                      <span>MBA</span>
                       <i class="bar"></i>
                     </fieldset>
                   </div>
@@ -94,7 +94,7 @@
                       at
                     </p>
                     <fieldset class="pure-u-1 pure-u-md-2-3 form-group">
-                      <span>PepsiCo, General Mills</span>
+                      <span>Booth, Kellogg</span>
                       <i class="bar"></i>
                     </fieldset>
                   </div>
@@ -114,7 +114,7 @@
                       for
                     </p>
                     <fieldset class="pure-u-1 pure-u-md-2-3 form-group">
-                      <span>residency</span>
+                      <span>Medical School</span>
                       <i class="bar"></i>
                     </fieldset>
                   </div>
@@ -145,7 +145,7 @@
                       for
                     </p>
                     <fieldset class="pure-u-1 pure-u-md-2-3 form-group">
-                      <span>Entry vs. Senior Software Engineer</span>
+                      <span>Electrical Engineering vs. Computer Science</span>
                       <i class="bar"></i>
                     </fieldset>
                   </div>
@@ -156,7 +156,7 @@
                       at
                     </p>
                     <fieldset class="pure-u-1 pure-u-md-2-3 form-group">
-                      <span>Google vs. a startup</span>
+                      <span>PennState vs. NYU</span>
                       <i class="bar"></i>
                     </fieldset>
                   </div>
@@ -185,27 +185,13 @@
             <div class="query-group pure-g">
               <fieldset class="pure-u-1 checkbox greyed">
                 <label>
-                  <input type="checkbox" name="works_company"/><i class="helper"></i>works at the company
+                  <input type="checkbox" name="works_company"/><i class="helper"></i>currently goes to the school
                 </label>
                 <label>
-                  <input type="checkbox" name="works_competitor"/><i class="helper"></i>works at a competitor
+                  <input type="checkbox" name="works_competitor"/><i class="helper"></i>graduated from the school
                 </label>
                 <label>
-                  <input type="checkbox" name="works_industry"/><i class="helper"></i>works in the broader industry 
-                </label>
-              </fieldset>
-            </div>
-
-            <div class="query-group pure-g">
-              <fieldset class="pure-u-1 checkbox greyed">
-                <label>
-                  <input type="checkbox" name="works_same_role"/><i class="helper"></i>works in the same role
-                </label>
-                <label>
-                  <input type="checkbox" name="works_with_role"/><i class="helper"></i>works in a related role
-                </label>
-                <label>
-                  <input type="checkbox" name="hires_for_role"/><i class="helper"></i>hires for the role
+                  <input type="checkbox" name="works_industry"/><i class="helper"></i>was accepted by the school but did not attend
                 </label>
               </fieldset>
             </div>
@@ -213,10 +199,18 @@
             <div class="query-group pure-g">
               <fieldset class="pure-u-1 checkbox greyed">
                 <label>
-                  <input type="checkbox" name="currently_works"/><i class="helper"></i>currently works there
+                  <input type="checkbox" name="works_same_role"/><i class="helper"></i>studied in the same concentration
                 </label>
                 <label>
-                  <input type="checkbox" name="has_worked"/><i class="helper"></i>has worked there in the past
+                  <input type="checkbox" name="works_with_role"/><i class="helper"></i>studied in a similar concentration
+                </label>
+              </fieldset>
+            </div>
+
+            <div class="query-group pure-g">
+              <fieldset class="pure-u-1 checkbox greyed">
+                <label>
+                  <input type="checkbox" name="hires_for_role"/><i class="helper"></i>conducts interviews of incoming students
                 </label>
               </fieldset>
             </div>
