--- a/client/school/index.html
+++ b/client/school/index.html
@@ -61,21 +61,21 @@
           <div class="pure-g">
             <div class="m-box pure-u-1 pure-u-lg-1-3">
               <blockquote>
-                <p>"I wanted to break into Tech but had an atypical background. Talking to someone who broke into the <span>exact role</span> I wanted with a <span>similar background</span> was crucial in my job hunt."</p>
-                <cite>- Product Analyst, Facebook</cite>
+                <p>"I wanted to get into a Top 5 MBA program but didn't have the typical background or test scores. Rather than spending thousands on a coach who would give me generic advice, I used LegUp to talk to someone who <span>had a similar background as me and who got into the schools I wanted</span> to apply to.</p>
+                <cite>- MBA Candidate, Wharton Business School</cite>
               </blockquote>
             </div>
             <div class="m-box pure-u-1 pure-u-lg-1-3">
               <blockquote>
-                <p>"My advisor helped me fix many of the crucial mistakes I was making in my interviews and helped me <span>prepare for the specific questions</span> I could expect at his company and others like it."</p>
-                <cite>- Brand Manager, Kraft </cite>
+                <p>"My advisor was an alumnus who had also conducted interviews in the past. She helped me practice my responses and <span>gave me specific feedback</span> so I could be prepared for the real thing."</p>
+                <cite>- JD Candidate, NYU Law School</cite>
               </blockquote>
             </div>
             <div class="m-box pure-u-1 pure-u-lg-1-3">
               <blockquote>
-                <p>"I had several offers I was really excited about, but talking to people who had worked in my exact role let me get the <span>inside scoop</span> on pay, culture, and work-life balance so I could make the right choice for my career."</p>
+                <p>"I was wrestling between several different programs I was accepted into. <span>Talking to graduates from each program</span> and learning about the culture there as well as the different opportunities they offered after graduation helped me make the right choice for my career."</p>
                 <cite>
-                  - Consultant, Accenture
+                  - Resident, UT Austin
                 </cite>
               </blockquote>
             </div>
@@ -87,7 +87,7 @@
         <div class="pure-g">
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/unlock.png"> Actionable</h3>
-            <p>Access informed feedback from an advisor who's incentivized to help you with your specific need</p>
+            <p>Access informed feedback from an advisor who's incentivized to help you with your specific need.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/targeted.png"> Targeted</h3>
