--- a/client/school/thankyou/index.html
+++ b/client/school/thankyou/index.html
@@ -4,8 +4,43 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Get help from someone who's been there, done that" name="description">
+  <meta content="school,admissions,advise,coaching" name="keywords">
   <title>LegUp</title>
-  <!-- Add meta data -->
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/img/icons/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="/img/icons/apple-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="/img/icons/apple-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="/img/icons/apple-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="/img/icons/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="/img/icons/apple-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="/img/icons/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/img/icons/apple-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-icon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="192x192"  href="/img/icons/android-icon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="/img/icons/favicon-96x96.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png" />
+  <link rel="manifest" href="/img/icons/manifest.json" />
+  <meta name="msapplication-TileColor" content="#ffffff" />
+  <meta name="msapplication-TileImage" content="/img/icons/ms-icon-144x144.png" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <!-- Schema.org markup for Google+ -->
+  <meta itemprop="name" content="LegUp" />
+  <meta itemprop="description" content="Get help from someone who's been there, done that" />
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="product" />
+  <meta name="twitter:title" content="LegUp" />
+  <meta name="twitter:description" content="Get help from someone who's been there, done that" />
+  <meta name="twitter:image" content="/img/icons/twitter-fb.png" />
+
+  <!-- Faceboom Open Graph data -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="LegUp" />
+  <meta property="og:description" content="Get help from someone who's been there, done that" />
+  <meta property="og:image"  content="/img/icons/twitter-fb.png" />
+
   <link href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css" rel="stylesheet">
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
