Update main header

--- a/client/career/index.html
+++ b/client/career/index.html
@@ -166,6 +166,16 @@
       'Goldman Sachs',
       'Facebook',
       'Airbnb',
+      'Apple',
+      'Amazon',
+      'Disney',
+      'GE',
+      'Facebook',
+      'Nike',
+      'Johnson & Johnson',
+      'American Express',
+      'JPMorgan Chase',
+      'Accenture',
     ];
 
     type(words);
