--- a/client/school/index.html
+++ b/client/school/index.html
@@ -64,7 +64,7 @@
   <main>
     <div class="splash-container">
       <div class="splash">
-        <h2 class="splash-head">Want to study at <span class="avoid-wrap"><span id="console">Stanford</span><span class="typed-cursor">|</span>?</span></h2>
+        <h2 class="splash-head">Want to go to your dream school?</h2>
         <h1 class="splash-head sub-head">Get help from someone who's <span class="avoid-wrap">been there,&nbsp;</span><span class="avoid-wrap">done that.</span></h1>
       </div>
       <div class="main-cta">
@@ -161,16 +161,4 @@
   </footer>
 </body>
 <script src="/js/typewriter.js" type="text/javascript"></script>
-<script type="text/javascript">
-  (function() {
-    var words = [
-      'Stanford',
-      'Harvard',
-      'Wharton',
-      'Columbia',
-    ];
-
-    type(words);
-  })();
-</script>
 </html>
