Show tooltips after a delay

--- a/client/career/request/index.html
+++ b/client/career/request/index.html
@@ -101,7 +101,7 @@
               </div>
             </div>
 
-            <div class="tooltip">
+            <div class="tooltip" style="display: none;">
               <legend class="pure-u-1">
                 <h4 class="no-margin">Some examples:</h4>
               </legend>
