Add undergrad testimonial

--- a/client/school/index.html
+++ b/client/school/index.html
@@ -110,7 +110,7 @@
               <blockquote>
                 <p>"I was wrestling between several different programs I was accepted into. <span>Talking to graduates from each program</span> and learning about the culture there as well as the different opportunities they offered after graduation helped me make the right choice for my career."</p>
                 <cite>
-                  - Resident, UT Austin
+                  - Undergraduate (Engineering), Penn State
                 </cite>
               </blockquote>
             </div>
