Update how we help copy

--- a/client/school/index.html
+++ b/client/school/index.html
@@ -126,11 +126,11 @@
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/targeted.png"> Targeted</h3>
-            <p>Get tailored advice from someone who's uniquely qualified to help you.</p>
+            <p>Tailored advice from someone who's uniquely qualified to help you.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/quick.png"> Quick</h3>
-            <p>Access information while it's still relevant to you. Have a specific deadline? Let us know.</p>
+            <p>Get information while it's still relevant to you. Have a specific deadline? Let us know.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/reliable.png"> Reliable</h3>
