Small landing page nits

--- a/client/career/index.html
+++ b/client/career/index.html
@@ -120,11 +120,11 @@
         <div class="pure-g">
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/unlock.png"> Actionable</h3>
-            <p>Access informed feedback from an advisor who's incentivized to help you with your specific need.</p>
+            <p>Access informed feedback from an advisor who's incentivized to help with your specific need.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/targeted.png"> Targeted</h3>
-            <p>Tailored advice from someone who's uniquely qualified to help you.</p>
+            <p>Receive tailored advice from someone who's uniquely qualified to help you.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/quick.png"> Quick</h3>
