--- a/client/career/index.html
+++ b/client/career/index.html
@@ -64,8 +64,8 @@
   <main>
     <div class="splash-container">
       <div class="splash">
-        <h2 class="splash-head">Want to work at <span class="avoid-wrap"><span id="console">Google</span><span class="typed-cursor">|</span>?</span></h2>
-        <h1 class="splash-head sub-head">Get help from someone who's <span class="avoid-wrap">been there,&nbsp;</span><span class="avoid-wrap">done that.</span></h1>
+        <h2 class="splash-head">Looking for your dream job?</h2>
+        <h1 class="splash-head sub-head"><span class="avoid-wrap">Get help from </span><span class="avoid-wrap">someone who has it.</span></h1>
       </div>
       <div class="main-cta">
         <a class="pure-button pure-button-primary" href="./request/">Get Connected</a>
@@ -158,27 +158,5 @@
     <a href="mailto:moashared@gmail.com">Contact Us</a>
   </footer>
 </body>
-<script src="/js/typewriter.js" type="text/javascript"></script>
-<script type="text/javascript">
-  (function() {
-    var words = [
-      'Google',
-      'Goldman Sachs',
-      'Facebook',
-      'Airbnb',
-      'Apple',
-      'Amazon',
-      'Disney',
-      'GE',
-      'Facebook',
-      'Nike',
-      'Johnson & Johnson',
-      'American Express',
-      'JPMorgan Chase',
-      'Accenture',
-    ];
-
-    type(words);
-  })();
 </script>
 </html>
