--- a/client/school/index.html
+++ b/client/school/index.html
@@ -64,8 +64,8 @@
   <main>
     <div class="splash-container">
       <div class="splash">
-        <h2 class="splash-head">Want to go to your dream school?</h2>
-        <h1 class="splash-head sub-head">Get help from someone who's <span class="avoid-wrap">been there,&nbsp;</span><span class="avoid-wrap">done that.</span></h1>
+        <h2 class="splash-head">Looking for your dream school?</h2>
+        <h1 class="splash-head sub-head"><span class="avoid-wrap">Get help from </span><span class="avoid-wrap">someone who's gone there.</span></h1>
       </div>
       <div class="main-cta">
         <a class="pure-button pure-button-primary" href="./request/">Get Connected</a>
@@ -160,5 +160,4 @@
     <a href="mailto:moashared@gmail.com">Contact Us</a>
   </footer>
 </body>
-<script src="/js/typewriter.js" type="text/javascript"></script>
 </html>
