--- a/client/school/request/index.html
+++ b/client/school/request/index.html
@@ -393,21 +393,35 @@
           <!-- <br> -->
 
           <div class="indented query-group">
-            <h4 class="no-margin">What is the <span class="underline">most you'd pay</span> for your time with your advisor? (<span class="underline">We'll try for lower</span>, but need to know your ceiling).</h4>
-            <div class="pure-u-1">
-              <fieldset class="pure-u-1 pure-u-md-1-3 form-group" required>
-                <input type="text" pattern="^[$]?[\d,]+(?:\.[\d]{0,2})?$" min="0" required name="request_max_price"/>
-                <label class="control-label" for="input">Maximum price</label><i class="bar"></i>
+            <div class="form-group">
+              <h4 class="no-margin">What is the <span class="underline">most you'd pay</span> for your time with your advisor? (<span class="underline">We'll try for lower</span>, but need to know your ceiling).</h4>
+              <div class="pure-u-1">
+                <fieldset class="pure-u-1 pure-u-md-1-3 form-group" required>
+                  <input type="text" pattern="^[$]?[\d,]+(?:\.[\d]{0,2})?$" min="0" required name="request_max_price"/>
+                  <label class="control-label" for="input">Maximum price</label><i class="bar"></i>
+                </fieldset>
+              </div>
+            </div>
+
+            <div class="form-group pure-form">
+              <h4 class="no-margin">How many <span class="underline">hours</span> do you need?</h4>
+              <div class="pure-u-1">
+                <fieldset class="pure-u-1-2 pure-u-md-1-6 form-group" required>
+                  <input type="text" pattern="^[\d]+(?:\.[\d]{0,2})?$" min="0" required name="request_hours"/>
+                  <label class="control-label" for="input">Hours</label><i class="bar"></i>
+                </fieldset>
+                <p class="pure-u-1-2 pure-u-md-1-6 form-group ">hours</p>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <fieldset class="form-group">
+                <textarea required name="request_freeform"></textarea>
+                <label class="control-label" for="textarea">Anything else we should know before introducing you?</label><i class="bar"></i>
               </fieldset>
             </div>
           </div>
 
-          <div class="indented">
-            <fieldset class="form-group">
-              <textarea required name="request_freeform"></textarea>
-              <label class="control-label" for="textarea">Anything else we should know before introducing you?</label><i class="bar"></i>
-            </fieldset>
-          </div>
         </section>
 
         <div class="pure-u-1 is-center">
