--- a/client/school/request/index.html
+++ b/client/school/request/index.html
@@ -307,7 +307,7 @@
                 </fieldset>
               </div>
               <div class="pure-u-1">
-                <fieldset class="pure-u-1 pure-u-md-1-3 form-group">
+                <fieldset class="pure-u-1 pure-u-md-1-3 form-group" required>
                   <input type="text" pattern="^((http[s]?|ftp):\/)?\/?([^:\/\s]+)((\/\w+)*\/)([\w\-\.]+[^#?\s]+)(.*)?(#[\w\-]+)?$" required name="request_submitter_linkedin"/>
                   <label class="control-label" for="input">LinkedIn URL</label><i class="bar"></i>
                 </fieldset>
